--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzeo1nKOatsuYnOECo9EYg",
+      "authorship_tag": "ABX9TyMAEa7f7KMt15Lr3vELMuD1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "QnCHFonyfLc3"
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "id": "aIOO3m1cfYXz",
         "outputId": "124d6f41-3a49-4979-ad53-efea6ce47bb0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -17603,7 +17603,7 @@
         "id": "GxGR9ewUgMSS",
         "outputId": "30b3bba0-22cc-441b-9059-a989ceb61538"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -18332,7 +18332,7 @@
         "id": "buH4R0zXhYoH",
         "outputId": "65bfb065-cf5d-41f7-b4b8-dce6e9c1c7ab"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18444,7 +18444,7 @@
         "id": "0vaE5nLLhn32",
         "outputId": "b16098c1-945a-4046-e62a-4ea83a472c41"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18528,7 +18528,7 @@
         "id": "iNloGNblhyJS",
         "outputId": "fb612627-61bf-4881-8948-579bee0433ba"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18565,7 +18565,7 @@
         "id": "WgMau5GMh5zT",
         "outputId": "946c2d42-e805-4cae-ce81-84017372c5df"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18615,7 +18615,7 @@
         "id": "qrl1cs6GiNbm",
         "outputId": "30a8c9b0-7407-4d6e-fe7e-21f6c8323e7a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -18702,7 +18702,7 @@
         "id": "LyrzSAbniZ9c",
         "outputId": "379c8916-c2d3-4530-86ff-6219d5573ed6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19280,7 +19280,7 @@
         "id": "OrZU4YIcikSz",
         "outputId": "0ddc6f69-d330-42c0-d347-7a7f468f891b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19881,7 +19881,7 @@
         "id": "WBm7s4Ani6ZD",
         "outputId": "4da3d77c-853c-4094-ffed-a000f4ed68a9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19967,7 +19967,7 @@
         "id": "u1UAusBljE7t",
         "outputId": "880e4de7-666e-4381-e83f-9f243f017e13"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -20000,7 +20000,8 @@
         "for i,j in zip(*highly_correlated_pairs):\n",
         "    if i!=j and numeric_attribute[i] not in attributes_to_remove and numeric_attribute[j] not in attributes_to_remove:\n",
         "        attribute_i= numeric_attribute[i]\n",
-        "        attribute_i= numeric_attribute[j]\n",
+        "        attribute_j= numeric_attribute[j]\n",
+        "        attributes_to_remove.add(attribute_j)\n",
         "\n",
         "        df_filtered=df.drop(columns=attributes_to_remove)\n",
         "\n",
@@ -20012,7 +20013,7 @@
       "metadata": {
         "id": "UYivizPfjKp5"
       },
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": []
     }
   ]
