--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaGhNyP78MGrfOQRqP0GdD",
+      "authorship_tag": "ABX9TyN5FFYvNgrzH7LTFC9m5+/D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17603,7 +17603,7 @@
         "id": "GxGR9ewUgMSS",
         "outputId": "966c5424-bba2-450d-da7b-07bc39d2ec1e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -19994,7 +19994,7 @@
       "source": [
         "correlation_matrix =df.corr(numeric_only=True)\n",
         "correlation_threshold=0.75\n",
-        "highly_correlated_pairs=np.where(np.abs(correlation_matrix>=correlation_threshold))\n",
+        "highly_correlated_pairs=np.where(np.abs(correlation_matrix)>=correlation_threshold)\n",
         "numeric_attribute =list(df.select_dtypes(include='number'))\n",
         "attributes_to_remove = set()\n",
         "for i,j in zip(*highly_correlated_pairs):\n",
@@ -20008,12 +20008,13 @@
         "        print(\"\\nOriginal DataFrame:\")\n",
         "        print(df)\n",
         "        print(\"\\nDataFrame after removing highly correlated attributes::\")\n",
-        "        print(df_filtered)"
+        "        print(df_filtered)\n",
+        ""
       ],
       "metadata": {
         "id": "UYivizPfjKp5"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     }
   ]
