--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5FFYvNgrzH7LTFC9m5+/D",
+      "authorship_tag": "ABX9TyPv4gYsHEqTS10MD5QQMVPi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -19992,30 +19992,109 @@
     {
       "cell_type": "code",
       "source": [
-        "correlation_matrix =df.corr(numeric_only=True)\n",
-        "correlation_threshold=0.75\n",
-        "highly_correlated_pairs=np.where(np.abs(correlation_matrix)>=correlation_threshold)\n",
-        "numeric_attribute =list(df.select_dtypes(include='number'))\n",
+        "correlation_matrix = df.corr(numeric_only=True)\n",
+        "correlation_threshold = 0.75\n",
+        "highly_correlated_pairs = np.where(np.abs(correlation_matrix) >= correlation_threshold)\n",
+        "numeric_attributes = list(df.select_dtypes(include='number').columns)\n",
+        "\n",
         "attributes_to_remove = set()\n",
-        "for i,j in zip(*highly_correlated_pairs):\n",
-        "    if i!=j and numeric_attribute[i] not in attributes_to_remove and numeric_attribute[j] not in attributes_to_remove:\n",
-        "        attribute_i= numeric_attribute[i]\n",
-        "        attribute_j= numeric_attribute[j]\n",
+        "\n",
+        "for i, j in zip(*highly_correlated_pairs):\n",
+        "    if i != j and numeric_attributes[i] not in attributes_to_remove and numeric_attributes[j] not in attributes_to_remove:\n",
+        "        attribute_i = numeric_attributes[i]\n",
+        "        attribute_j = numeric_attributes[j]\n",
         "        attributes_to_remove.add(attribute_j)\n",
         "\n",
-        "        df_filtered=df.drop(columns=attributes_to_remove)\n",
+        "df_filtered = df.drop(columns=attributes_to_remove)\n",
         "\n",
-        "        print(\"\\nOriginal DataFrame:\")\n",
-        "        print(df)\n",
-        "        print(\"\\nDataFrame after removing highly correlated attributes::\")\n",
-        "        print(df_filtered)\n",
-        ""
+        "print(\"\\nOriginal DataFrame:\")\n",
+        "print(df)\n",
+        "\n",
+        "print(\"\\nDataFrame after removing highly correlated attributes:\")\n",
+        "print(df_filtered)"
       ],
       "metadata": {
-        "id": "UYivizPfjKp5"
+        "id": "UYivizPfjKp5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "432bfafd-b8f9-48db-cc51-e50ba812124e"
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Original DataFrame:\n",
+            "   Attribute Name                                        Description  \\\n",
+            "0             age                                       age in years   \n",
+            "1             sex                              Gender of the patient   \n",
+            "2              cp                                    chest pain type   \n",
+            "3        trestbps  resting blood pressure (in mm Hg on admission ...   \n",
+            "4            chol                         serum cholestoral in mg/dl   \n",
+            "5             fbs                    fasting blood sugar > 120 mg/dl   \n",
+            "6         restecg               resting electrocardiographic results   \n",
+            "7         thalach                        maximum heart rate achieved   \n",
+            "8           exang                            exercise induced angina   \n",
+            "9         oldpeak  ST depression induced by exercise relative to ...   \n",
+            "10          slope          the slope of the peak exercise ST segment   \n",
+            "11             ca  number of major vessels (0-3) colored by flour...   \n",
+            "12           thal   1 = normal; 2 = fixed defect; 3 = reversable ...   \n",
+            "13         target   The class label,refers to the presence of hea...   \n",
+            "\n",
+            "   Data Type                               Possible Values  \n",
+            "0    Numeric                           Range between 29-77  \n",
+            "1     Binary                                  Female, Male  \n",
+            "2    Ordinal                             Range between 0-3  \n",
+            "3    Numeric                          Range between 94-200  \n",
+            "4    Numeric                         Range between 126-564  \n",
+            "5     Binary  1= grater than 120mg/dl 0=less than 120mg/dl  \n",
+            "6    Nominal                             Range between 0-2  \n",
+            "7    Numeric                          Range between 71-202  \n",
+            "8     Binary              1=exercise induced angina  0= no  \n",
+            "9    Numeric                           Range between 0-6.2  \n",
+            "10   Ordinal                             Range between 0-2  \n",
+            "11   Ordinal                             Range between 0-4  \n",
+            "12   Nominal                             Range between 0-3  \n",
+            "13    Binary   1 = have heart disease 0 = no heart disease  \n",
+            "\n",
+            "DataFrame after removing highly correlated attributes:\n",
+            "   Attribute Name                                        Description  \\\n",
+            "0             age                                       age in years   \n",
+            "1             sex                              Gender of the patient   \n",
+            "2              cp                                    chest pain type   \n",
+            "3        trestbps  resting blood pressure (in mm Hg on admission ...   \n",
+            "4            chol                         serum cholestoral in mg/dl   \n",
+            "5             fbs                    fasting blood sugar > 120 mg/dl   \n",
+            "6         restecg               resting electrocardiographic results   \n",
+            "7         thalach                        maximum heart rate achieved   \n",
+            "8           exang                            exercise induced angina   \n",
+            "9         oldpeak  ST depression induced by exercise relative to ...   \n",
+            "10          slope          the slope of the peak exercise ST segment   \n",
+            "11             ca  number of major vessels (0-3) colored by flour...   \n",
+            "12           thal   1 = normal; 2 = fixed defect; 3 = reversable ...   \n",
+            "13         target   The class label,refers to the presence of hea...   \n",
+            "\n",
+            "   Data Type                               Possible Values  \n",
+            "0    Numeric                           Range between 29-77  \n",
+            "1     Binary                                  Female, Male  \n",
+            "2    Ordinal                             Range between 0-3  \n",
+            "3    Numeric                          Range between 94-200  \n",
+            "4    Numeric                         Range between 126-564  \n",
+            "5     Binary  1= grater than 120mg/dl 0=less than 120mg/dl  \n",
+            "6    Nominal                             Range between 0-2  \n",
+            "7    Numeric                          Range between 71-202  \n",
+            "8     Binary              1=exercise induced angina  0= no  \n",
+            "9    Numeric                           Range between 0-6.2  \n",
+            "10   Ordinal                             Range between 0-2  \n",
+            "11   Ordinal                             Range between 0-4  \n",
+            "12   Nominal                             Range between 0-3  \n",
+            "13    Binary   1 = have heart disease 0 = no heart disease  \n"
+          ]
+        }
+      ]
     }
   ]
 }
