--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLuJ255LctuZ0CLoH8E2Hr",
+      "authorship_tag": "ABX9TyOOOQg6BC3ReIRvy+qeWg0E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -18549,9 +18549,9 @@
       "source": [
         "The histogram illustrates the age distribution of participants in our dataset. Key observations include:\n",
         "\n",
-        "**Majority Age Group:** Most individuals are aged between 50 and 60 years, indicating a focus on middle-aged adults.\n",
+        "Majority Age Group: Most individuals are aged between 50 and 60 years, indicating a focus on middle-aged adults.\n",
         "\n",
-        "**Range:** The ages range from approximately 30 to over 70, showing a diverse study population."
+        "Range: The ages range from approximately 30 to over 70, showing a diverse study population."
       ],
       "metadata": {
         "id": "_2M6YW0fqWJR"
