--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "QnCHFonyfLc3"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "id": "aIOO3m1cfYXz",
         "outputId": "e2782d81-83b3-4576-86ef-9b707e82a6b1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2988,40 +2988,167 @@
     {
       "cell_type": "code",
       "source": [
-        "contingency_table=pd.crosstab(df['restecg'],df['thal'])\n",
-        "print (\"Contingency Table:\")\n",
-        "print (contingency_table)\n",
-        "chi2_stat,p_value,dof,expected =chi2_contingency(contingency_table)\n",
-        "print(\"Chi-Square Statistic:\",chi2_stat)\n",
-        "print(\"Degree of Freedom:\",dof)\n",
-        "print(\"Expected Frequencies:\")\n",
-        "print(expected)"
+        "\n",
+        "\n",
+        "# Define the categorical columns from your dataset\n",
+        "categorical_columns = ['sex', 'cp', 'fbs', 'restecg', 'exang', 'slope', 'ca', 'thal']\n",
+        "\n",
+        "# Loop through the columns and perform the Chi-Squared test\n",
+        "for column in categorical_columns:\n",
+        "    print(f\"\\nChi-Square Test for {column} and Heart Attack Risk (target):\")\n",
+        "\n",
+        "    # Create contingency table for the column and target\n",
+        "    contingency_table = pd.crosstab(df[column], df['target'])\n",
+        "\n",
+        "    # Display the contingency table\n",
+        "    print(\"Contingency Table:\")\n",
+        "    print(contingency_table)\n",
+        "\n",
+        "    # Perform Chi-Squared test\n",
+        "    chi2_stat, p_value, dof, expected = chi2_contingency(contingency_table)\n",
+        "\n",
+        "    # Display the test results\n",
+        "    print(f\"Chi-Square Statistic: {chi2_stat}\")\n",
+        "    print(f\"P-Value: {p_value}\")\n",
+        "    print(f\"Degrees of Freedom: {dof}\")\n",
+        "    print(\"Expected Frequencies:\")\n",
+        "    print(expected)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u1UAusBljE7t",
-        "outputId": "880e4de7-666e-4381-e83f-9f243f017e13"
+        "outputId": "dc2400ef-beb1-4900-f9d1-b86e7d6bddf6"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
+            "Chi-Square Test for sex and Heart Attack Risk (target):\n",
             "Contingency Table:\n",
-            "thal     0   1    2    3\n",
-            "restecg                 \n",
-            "0        3  35  255  204\n",
-            "1        4  25  282  202\n",
-            "2        0   4    7    4\n",
-            "Chi-Square Statistic: 13.897745762294702\n",
-            "Degree of Freedom: 6\n",
+            "target    0    1\n",
+            "sex             \n",
+            "0        86  226\n",
+            "1       413  300\n",
+            "Chi-Square Statistic: 78.86305133922973\n",
+            "P-Value: 6.656820681726434e-19\n",
+            "Degrees of Freedom: 1\n",
             "Expected Frequencies:\n",
-            "[[3.39414634e+00 3.10321951e+01 2.63773659e+02 1.98800000e+02]\n",
-            " [3.50341463e+00 3.20312195e+01 2.72265366e+02 2.05200000e+02]\n",
-            " [1.02439024e-01 9.36585366e-01 7.96097561e+00 6.00000000e+00]]\n"
+            "[[151.89073171 160.10926829]\n",
+            " [347.10926829 365.89073171]]\n",
+            "\n",
+            "Chi-Square Test for cp and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "cp              \n",
+            "0       375  122\n",
+            "1        33  134\n",
+            "2        65  219\n",
+            "3        26   51\n",
+            "Chi-Square Statistic: 280.98224857035257\n",
+            "P-Value: 1.2980664694820452e-60\n",
+            "Degrees of Freedom: 3\n",
+            "Expected Frequencies:\n",
+            "[[241.95414634 255.04585366]\n",
+            " [ 81.3004878   85.6995122 ]\n",
+            " [138.2595122  145.7404878 ]\n",
+            " [ 37.48585366  39.51414634]]\n",
+            "\n",
+            "Chi-Square Test for fbs and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "fbs             \n",
+            "0       417  455\n",
+            "1        82   71\n",
+            "Chi-Square Statistic: 1.5133794801852827\n",
+            "P-Value: 0.21862413102893974\n",
+            "Degrees of Freedom: 1\n",
+            "Expected Frequencies:\n",
+            "[[424.51512195 447.48487805]\n",
+            " [ 74.48487805  78.51512195]]\n",
+            "\n",
+            "Chi-Square Test for restecg and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target     0    1\n",
+            "restecg          \n",
+            "0        283  214\n",
+            "1        204  309\n",
+            "2         12    3\n",
+            "Chi-Square Statistic: 35.784315178352564\n",
+            "P-Value: 1.6964251003877617e-08\n",
+            "Degrees of Freedom: 2\n",
+            "Expected Frequencies:\n",
+            "[[241.95414634 255.04585366]\n",
+            " [249.74341463 263.25658537]\n",
+            " [  7.30243902   7.69756098]]\n",
+            "\n",
+            "Chi-Square Test for exang and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "exang           \n",
+            "0       225  455\n",
+            "1       274   71\n",
+            "Chi-Square Statistic: 194.81553908607899\n",
+            "P-Value: 2.8266374296634637e-44\n",
+            "Degrees of Freedom: 1\n",
+            "Expected Frequencies:\n",
+            "[[331.04390244 348.95609756]\n",
+            " [167.95609756 177.04390244]]\n",
+            "\n",
+            "Chi-Square Test for slope and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "slope           \n",
+            "0        46   28\n",
+            "1       324  158\n",
+            "2       129  340\n",
+            "Chi-Square Statistic: 155.87294465816163\n",
+            "P-Value: 1.421085239254566e-34\n",
+            "Degrees of Freedom: 2\n",
+            "Expected Frequencies:\n",
+            "[[ 36.02536585  37.97463415]\n",
+            " [234.65170732 247.34829268]\n",
+            " [228.32292683 240.67707317]]\n",
+            "\n",
+            "Chi-Square Test for ca and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "ca              \n",
+            "0       163  415\n",
+            "1       160   66\n",
+            "2       113   21\n",
+            "3        60    9\n",
+            "4         3   15\n",
+            "Chi-Square Statistic: 257.2929975952664\n",
+            "P-Value: 1.747013451046176e-54\n",
+            "Degrees of Freedom: 4\n",
+            "Expected Frequencies:\n",
+            "[[281.38731707 296.61268293]\n",
+            " [110.02341463 115.97658537]\n",
+            " [ 65.23512195  68.76487805]\n",
+            " [ 33.59121951  35.40878049]\n",
+            " [  8.76292683   9.23707317]]\n",
+            "\n",
+            "Chi-Square Test for thal and Heart Attack Risk (target):\n",
+            "Contingency Table:\n",
+            "target    0    1\n",
+            "thal            \n",
+            "0         4    3\n",
+            "1        43   21\n",
+            "2       132  412\n",
+            "3       320   90\n",
+            "Chi-Square Statistic: 280.33068874382866\n",
+            "P-Value: 1.7958943544531507e-60\n",
+            "Degrees of Freedom: 3\n",
+            "Expected Frequencies:\n",
+            "[[  3.40780488   3.59219512]\n",
+            " [ 31.15707317  32.84292683]\n",
+            " [264.83512195 279.16487805]\n",
+            " [199.6        210.4       ]]\n"
           ]
         }
       ]
@@ -3055,9 +3182,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "432bfafd-b8f9-48db-cc51-e50ba812124e"
+        "outputId": "b36ed5ea-605f-4186-adc0-39b73eda9951"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -3065,70 +3192,62 @@
           "text": [
             "\n",
             "Original DataFrame:\n",
-            "   Attribute Name                                        Description  \\\n",
-            "0             age                                       age in years   \n",
-            "1             sex                              Gender of the patient   \n",
-            "2              cp                                    chest pain type   \n",
-            "3        trestbps  resting blood pressure (in mm Hg on admission ...   \n",
-            "4            chol                         serum cholestoral in mg/dl   \n",
-            "5             fbs                    fasting blood sugar > 120 mg/dl   \n",
-            "6         restecg               resting electrocardiographic results   \n",
-            "7         thalach                        maximum heart rate achieved   \n",
-            "8           exang                            exercise induced angina   \n",
-            "9         oldpeak  ST depression induced by exercise relative to ...   \n",
-            "10          slope          the slope of the peak exercise ST segment   \n",
-            "11             ca  number of major vessels (0-3) colored by flour...   \n",
-            "12           thal   1 = normal; 2 = fixed defect; 3 = reversable ...   \n",
-            "13         target   The class label,refers to the presence of hea...   \n",
+            "      age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+            "0      52    1   0       125   212    0        1      168      0      1.0   \n",
+            "1      53    1   0       140   203    1        0      155      1      3.1   \n",
+            "2      70    1   0       145   174    0        1      125      1      2.6   \n",
+            "3      61    1   0       148   203    0        1      161      0      0.0   \n",
+            "4      62    0   0       138   294    1        1      106      0      1.9   \n",
+            "...   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+            "1020   59    1   1       140   221    0        1      164      1      0.0   \n",
+            "1021   60    1   0       125   258    0        0      141      1      2.8   \n",
+            "1022   47    1   0       110   275    0        0      118      1      1.0   \n",
+            "1023   50    0   0       110   254    0        0      159      0      0.0   \n",
+            "1024   54    1   0       120   188    0        1      113      0      1.4   \n",
             "\n",
-            "   Data Type                               Possible Values  \n",
-            "0    Numeric                           Range between 29-77  \n",
-            "1     Binary                                  Female, Male  \n",
-            "2    Ordinal                             Range between 0-3  \n",
-            "3    Numeric                          Range between 94-200  \n",
-            "4    Numeric                         Range between 126-564  \n",
-            "5     Binary  1= grater than 120mg/dl 0=less than 120mg/dl  \n",
-            "6    Nominal                             Range between 0-2  \n",
-            "7    Numeric                          Range between 71-202  \n",
-            "8     Binary              1=exercise induced angina  0= no  \n",
-            "9    Numeric                           Range between 0-6.2  \n",
-            "10   Ordinal                             Range between 0-2  \n",
-            "11   Ordinal                             Range between 0-4  \n",
-            "12   Nominal                             Range between 0-3  \n",
-            "13    Binary   1 = have heart disease 0 = no heart disease  \n",
+            "      slope  ca  thal  target  \n",
+            "0         2   2     3       0  \n",
+            "1         0   0     3       0  \n",
+            "2         0   0     3       0  \n",
+            "3         2   1     3       0  \n",
+            "4         1   3     2       0  \n",
+            "...     ...  ..   ...     ...  \n",
+            "1020      2   0     2       1  \n",
+            "1021      1   1     3       0  \n",
+            "1022      1   1     2       0  \n",
+            "1023      2   0     2       1  \n",
+            "1024      1   1     3       0  \n",
+            "\n",
+            "[1025 rows x 14 columns]\n",
             "\n",
             "DataFrame after removing highly correlated attributes:\n",
-            "   Attribute Name                                        Description  \\\n",
-            "0             age                                       age in years   \n",
-            "1             sex                              Gender of the patient   \n",
-            "2              cp                                    chest pain type   \n",
-            "3        trestbps  resting blood pressure (in mm Hg on admission ...   \n",
-            "4            chol                         serum cholestoral in mg/dl   \n",
-            "5             fbs                    fasting blood sugar > 120 mg/dl   \n",
-            "6         restecg               resting electrocardiographic results   \n",
-            "7         thalach                        maximum heart rate achieved   \n",
-            "8           exang                            exercise induced angina   \n",
-            "9         oldpeak  ST depression induced by exercise relative to ...   \n",
-            "10          slope          the slope of the peak exercise ST segment   \n",
-            "11             ca  number of major vessels (0-3) colored by flour...   \n",
-            "12           thal   1 = normal; 2 = fixed defect; 3 = reversable ...   \n",
-            "13         target   The class label,refers to the presence of hea...   \n",
+            "      age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+            "0      52    1   0       125   212    0        1      168      0      1.0   \n",
+            "1      53    1   0       140   203    1        0      155      1      3.1   \n",
+            "2      70    1   0       145   174    0        1      125      1      2.6   \n",
+            "3      61    1   0       148   203    0        1      161      0      0.0   \n",
+            "4      62    0   0       138   294    1        1      106      0      1.9   \n",
+            "...   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+            "1020   59    1   1       140   221    0        1      164      1      0.0   \n",
+            "1021   60    1   0       125   258    0        0      141      1      2.8   \n",
+            "1022   47    1   0       110   275    0        0      118      1      1.0   \n",
+            "1023   50    0   0       110   254    0        0      159      0      0.0   \n",
+            "1024   54    1   0       120   188    0        1      113      0      1.4   \n",
             "\n",
-            "   Data Type                               Possible Values  \n",
-            "0    Numeric                           Range between 29-77  \n",
-            "1     Binary                                  Female, Male  \n",
-            "2    Ordinal                             Range between 0-3  \n",
-            "3    Numeric                          Range between 94-200  \n",
-            "4    Numeric                         Range between 126-564  \n",
-            "5     Binary  1= grater than 120mg/dl 0=less than 120mg/dl  \n",
-            "6    Nominal                             Range between 0-2  \n",
-            "7    Numeric                          Range between 71-202  \n",
-            "8     Binary              1=exercise induced angina  0= no  \n",
-            "9    Numeric                           Range between 0-6.2  \n",
-            "10   Ordinal                             Range between 0-2  \n",
-            "11   Ordinal                             Range between 0-4  \n",
-            "12   Nominal                             Range between 0-3  \n",
-            "13    Binary   1 = have heart disease 0 = no heart disease  \n"
+            "      slope  ca  thal  target  \n",
+            "0         2   2     3       0  \n",
+            "1         0   0     3       0  \n",
+            "2         0   0     3       0  \n",
+            "3         2   1     3       0  \n",
+            "4         1   3     2       0  \n",
+            "...     ...  ..   ...     ...  \n",
+            "1020      2   0     2       1  \n",
+            "1021      1   1     3       0  \n",
+            "1022      1   1     2       0  \n",
+            "1023      2   0     2       1  \n",
+            "1024      1   1     3       0  \n",
+            "\n",
+            "[1025 rows x 14 columns]\n"
           ]
         }
       ]
