--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "QnCHFonyfLc3"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1572,7 +1572,7 @@
         "id": "RzrG-XGXjF9v",
         "outputId": "3610bc4c-7c50-4181-cc78-0b4151f3f8f7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1636,7 +1636,7 @@
         "id": "jWSZeE7Kl6lw",
         "outputId": "761432cc-855f-4d1b-cdd4-2dc3df0365df"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2457,7 +2457,7 @@
         "id": "04_BchFApXyh",
         "outputId": "5ff7a239-4aba-4ab8-bc38-87b36a96cae7"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3103,7 +3103,7 @@
         "id": "WBm7s4Ani6ZD",
         "outputId": "11064e39-2fb5-41e3-8cf9-4cc4af133725"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3176,7 +3176,7 @@
         "\n",
         "\n",
         "# Define the categorical columns from your dataset\n",
-        "categorical_columns = ['sex', 'cp', 'fbs', 'restecg', 'exang', 'slope', 'ca', 'thal']\n",
+        "categorical_columns = ['restecg','thal']\n",
         "\n",
         "# Loop through the columns and perform the Chi-Squared test\n",
         "for column in categorical_columns:\n",
@@ -3204,57 +3204,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u1UAusBljE7t",
-        "outputId": "dc2400ef-beb1-4900-f9d1-b86e7d6bddf6"
+        "outputId": "137e2f41-9c91-4ccb-829b-95f50b06044a"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Chi-Square Test for sex and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "sex             \n",
-            "0        86  226\n",
-            "1       413  300\n",
-            "Chi-Square Statistic: 78.86305133922973\n",
-            "P-Value: 6.656820681726434e-19\n",
-            "Degrees of Freedom: 1\n",
-            "Expected Frequencies:\n",
-            "[[151.89073171 160.10926829]\n",
-            " [347.10926829 365.89073171]]\n",
-            "\n",
-            "Chi-Square Test for cp and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "cp              \n",
-            "0       375  122\n",
-            "1        33  134\n",
-            "2        65  219\n",
-            "3        26   51\n",
-            "Chi-Square Statistic: 280.98224857035257\n",
-            "P-Value: 1.2980664694820452e-60\n",
-            "Degrees of Freedom: 3\n",
-            "Expected Frequencies:\n",
-            "[[241.95414634 255.04585366]\n",
-            " [ 81.3004878   85.6995122 ]\n",
-            " [138.2595122  145.7404878 ]\n",
-            " [ 37.48585366  39.51414634]]\n",
-            "\n",
-            "Chi-Square Test for fbs and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "fbs             \n",
-            "0       417  455\n",
-            "1        82   71\n",
-            "Chi-Square Statistic: 1.5133794801852827\n",
-            "P-Value: 0.21862413102893974\n",
-            "Degrees of Freedom: 1\n",
-            "Expected Frequencies:\n",
-            "[[424.51512195 447.48487805]\n",
-            " [ 74.48487805  78.51512195]]\n",
             "\n",
             "Chi-Square Test for restecg and Heart Attack Risk (target):\n",
             "Contingency Table:\n",
@@ -3270,53 +3227,6 @@
             "[[241.95414634 255.04585366]\n",
             " [249.74341463 263.25658537]\n",
             " [  7.30243902   7.69756098]]\n",
-            "\n",
-            "Chi-Square Test for exang and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "exang           \n",
-            "0       225  455\n",
-            "1       274   71\n",
-            "Chi-Square Statistic: 194.81553908607899\n",
-            "P-Value: 2.8266374296634637e-44\n",
-            "Degrees of Freedom: 1\n",
-            "Expected Frequencies:\n",
-            "[[331.04390244 348.95609756]\n",
-            " [167.95609756 177.04390244]]\n",
-            "\n",
-            "Chi-Square Test for slope and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "slope           \n",
-            "0        46   28\n",
-            "1       324  158\n",
-            "2       129  340\n",
-            "Chi-Square Statistic: 155.87294465816163\n",
-            "P-Value: 1.421085239254566e-34\n",
-            "Degrees of Freedom: 2\n",
-            "Expected Frequencies:\n",
-            "[[ 36.02536585  37.97463415]\n",
-            " [234.65170732 247.34829268]\n",
-            " [228.32292683 240.67707317]]\n",
-            "\n",
-            "Chi-Square Test for ca and Heart Attack Risk (target):\n",
-            "Contingency Table:\n",
-            "target    0    1\n",
-            "ca              \n",
-            "0       163  415\n",
-            "1       160   66\n",
-            "2       113   21\n",
-            "3        60    9\n",
-            "4         3   15\n",
-            "Chi-Square Statistic: 257.2929975952664\n",
-            "P-Value: 1.747013451046176e-54\n",
-            "Degrees of Freedom: 4\n",
-            "Expected Frequencies:\n",
-            "[[281.38731707 296.61268293]\n",
-            " [110.02341463 115.97658537]\n",
-            " [ 65.23512195  68.76487805]\n",
-            " [ 33.59121951  35.40878049]\n",
-            " [  8.76292683   9.23707317]]\n",
             "\n",
             "Chi-Square Test for thal and Heart Attack Risk (target):\n",
             "Contingency Table:\n",
