--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -51,6 +51,7 @@
         "import pickle\n",
         "import jinja2\n",
         "import seaborn as sns\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
         "\n",
         "df = pd.read_csv('heart.csv')\n"
@@ -58,7 +59,7 @@
       "metadata": {
         "id": "QnCHFonyfLc3"
       },
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -3206,7 +3207,7 @@
         "id": "u1UAusBljE7t",
         "outputId": "137e2f41-9c91-4ccb-829b-95f50b06044a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3346,6 +3347,222 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Data Transformation:**"
+      ],
+      "metadata": {
+        "id": "d5cA99507Zrq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Normaliztion:**"
+      ],
+      "metadata": {
+        "id": "gy_fZn_V70Q4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Select columns that need to be normalize\n",
+        "columns_to_normalize = [ 'chol', 'thalach',  'oldpeak']\n",
+        "data_to_normalize = df[columns_to_normalize]\n",
+        "\n",
+        "# Apply Min-Max scaling\n",
+        "minmax_scaler = MinMaxScaler()\n",
+        "normalized_data = minmax_scaler.fit_transform(data_to_normalize)\n",
+        "\n",
+        "# Replace original values with normalized values\n",
+        "df[columns_to_normalize] = normalized_data\n",
+        "\n",
+        "print(\"Min-Max scaled data (selected columns normalized):\")\n",
+        "print(df.head())\n"
+      ],
+      "metadata": {
+        "id": "5PzQKwhf7ZcD",
+        "outputId": "7215d899-e842-43e3-9aff-c8d5a366bfa9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Min-Max scaled data (selected columns normalized):\n",
+            "   age  sex  cp  trestbps      chol  fbs  restecg   thalach  exang   oldpeak  \\\n",
+            "0   52    1   0       125  0.196347    0        1  0.740458      0  0.161290   \n",
+            "1   53    1   0       140  0.175799    1        0  0.641221      1  0.500000   \n",
+            "2   70    1   0       145  0.109589    0        1  0.412214      1  0.419355   \n",
+            "3   61    1   0       148  0.175799    0        1  0.687023      0  0.000000   \n",
+            "4   62    0   0       138  0.383562    1        1  0.267176      0  0.306452   \n",
+            "\n",
+            "   slope  ca  thal  target  \n",
+            "0      2   2     3       0  \n",
+            "1      0   0     3       0  \n",
+            "2      0   0     3       0  \n",
+            "3      2   1     3       0  \n",
+            "4      1   3     2       0  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We applied Min-Max normalization to specific attributes to rescale their values within the range of [0,1]. preventing any single attribute from dominating due to differences in scale. By normalizing cholesterol (chol), maximum heart rate (thalach), and ST depression (oldpeak), we improve the interpretability of the data and enhance the efficiency of our models\n"
+      ],
+      "metadata": {
+        "id": "KdvpDl5C9jFG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Discretization:**\n"
+      ],
+      "metadata": {
+        "id": "1b4jesyZ9mQh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# make sure that the  age bins based on the range (29-77)\n",
+        "age_bins = [29, 44, 60, 77]\n",
+        "age_labels = [0, 1, 2]\n",
+        "\n",
+        "# Perform discretization\n",
+        "df['age'] = pd.cut(df['age'], bins=age_bins, labels=age_labels, include_lowest=True)\n",
+        "\n",
+        "# Display  the  discretized values\n",
+        "print(\" Discretized Age:\")\n",
+        "print(df[ 'age'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yV8h7XVO9ygx",
+        "outputId": "69fdd2f3-2b1a-441e-a11c-3ccc98690d9c"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Discretized Age:\n",
+            "0       1\n",
+            "1       1\n",
+            "2       2\n",
+            "3       2\n",
+            "4       2\n",
+            "       ..\n",
+            "1020    1\n",
+            "1021    1\n",
+            "1022    1\n",
+            "1023    1\n",
+            "1024    1\n",
+            "Name: age, Length: 1025, dtype: category\n",
+            "Categories (3, int64): [0 < 1 < 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We discretized the age variable into three categories  to improve interpretability and analysis. By applying binning, we transformed continuous age values into categorical groups, making it easier to identify trends and patterns in the dataset.\n",
+        "\n",
+        "The age bins were set based on the range (29-77):\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Bin 0 (Young Adults): Ages 29-44\n",
+        "*   Bin 1 (Middle-Aged Adults): Ages 45-60\n",
+        "*  Bin 2 (Seniors): Ages 61-77\n",
+        "\n",
+        "\n",
+        "\n",
+        "We used Min-Max binning with pd.cut(), ensuring that values at the lower boundary (age 29) were included in the first bin"
+      ],
+      "metadata": {
+        "id": "kdBuy4J_AeGe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bp_bins = [94, 120, 140, 200]  # Categories: Low, Normal, High\n",
+        "bp_labels = [0, 1, 2]\n",
+        "\n",
+        "# Perform discretization\n",
+        "df['trestbps'] = pd.cut(df['trestbps'], bins=bp_bins, labels=bp_labels, include_lowest=True)\n",
+        "\n",
+        "# Displa discretized values\n",
+        "print(\" Discretized Resting Blood Pressure:\")\n",
+        "print(df[ 'trestbps'])"
+      ],
+      "metadata": {
+        "id": "l_4UU6cQBd0k",
+        "outputId": "f5322d1f-78a4-4fbd-8c93-1ff8c84bc7da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Discretized Resting Blood Pressure:\n",
+            "0       1\n",
+            "1       1\n",
+            "2       2\n",
+            "3       2\n",
+            "4       1\n",
+            "       ..\n",
+            "1020    1\n",
+            "1021    1\n",
+            "1022    0\n",
+            "1023    0\n",
+            "1024    0\n",
+            "Name: trestbps, Length: 1025, dtype: category\n",
+            "Categories (3, int64): [0 < 1 < 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We discretized the resting blood pressure (trestbps) into three categories to better classify blood pressure levels and enhance analysis. This transformation converts continuous blood pressure values into distinct groups, making it easier to identify and relationships with other health factors.\n",
+        "\n",
+        "The blood pressure bins were defined as follows:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   0 (Low Blood Pressure): 94-120 mmHg\n",
+        "*   1 (Normal Blood Pressure): 121-140 mmHg\n",
+        "*   2 (High Blood Pressure): 141-200 mmHg\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "We used binning with pd.cut(), ensuring that the lowest boundary (94 mmHg) was included in the first category."
+      ],
+      "metadata": {
+        "id": "4X7N8vjaCjeM"
+      }
     }
   ]
 }
